# apriltags2_ros

./: CMakeLists.txt  README.md  package.xml
config/: left.yaml  right.yaml  settings.yaml  tags.yaml
include/: sfm_bundle_adjuster.h
include/apriltags2/: apriltag.h
include/apriltags2_ros/: CommonHeader.h  common_functions.h  continuous_detector.h
msg/: AprilTagDetection.msg  AprilTagPosition.msg
scripts/: decode_and_save_gps_localization.py
src/: common_functions.cpp  continuous_detector.cpp  ippe.cpp
